# Dtugpt

./: .gitignore  CHANGES_DIFF.md  COLD_START_FIX_SUMMARY.md  README.md  SYSTEM_ARCHITECTURE.md  VERIFICATION_CHECKLIST.md
Backend/: .gitignore  ARCHITECTURE.md  DETAILED_SYSTEM_ARCHITECTURE.md  OPERATIONS.md  RESULT_SERVICE_USAGE.md  bulk_ingest.py  db.py  debug_results.py  main.py  models.py  pyproject.toml  requirements.txt
Backend/services/: analytics.py  bulk_ingest.py  embedding.py  pdf_service.py  query_service.py  response_formatter.py  result_service.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  MessageDisplay.jsx  file_upload.jsx  index.css  main.jsx
