[tool.poetry]
name = "backend"
version = "0.1.0"
description = "DTU GPT Backend"
authors = ["Gaurav"]
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
beautifulsoup4 = "*"
faiss-cpu = "*"
fastapi = "*"
gdown = "*"
langchain = "*"
langchain-deepseek = "*"
langchain-google-genai = "*"
langchain-groq = "*"
langchain-openai = "*"
langgraph = "*"
pdf2image = "*"
pdfplumber = "*"
pillow = "*"
pydantic = "*"
pymongo = "*"
pytesseract = "*"
python-dotenv = "*"
python-multipart = "*"
requests = "*"
selenium = "*"
sentence-transformers = "*"
uvicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"