[tool.poetry]
name = "backend"
version = "0.1.0"
description = "DTU GPT Backend"
authors = ["Gaurav"]
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
beautifulsoup4 = "*"
faiss-cpu = "*"
fastapi = "*"
gdown = "*"
langchain = "*"
langchain-groq = "*"
pdf2image = "*"  # Requires Poppler system binaries
pdfplumber = "*"
pillow = "*"
pydantic = "*"
pymongo = "*"
pytesseract = "*"  # Requires Tesseract OCR system binaries
python-dotenv = "*"
python-multipart = "*"
requests = "*"
selenium = "*"  # Used in services/result_service.py
sentence-transformers = "*"
uvicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"